--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -37,7 +37,7 @@
       color: $dark;
       font-size: 20vw;
       line-height: 1;
-      margin-bottom: 4vh;
+      margin-top: 4vh;
     }
   }
 }
