landing pages tidied and almost complete

--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -49,7 +49,7 @@
 
   h1 {
     color: $light;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     font-size: 50px;
     animation: hero-title-loader 0.1s forwards ease-in-out;
     animation-delay: 0.6s;
