--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -22,35 +22,6 @@
       color: $dark;
     }
   }
-
-  &__hero {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    a {
-      font-family: "Coco";
-    }
-  }
-
-  &__hero-ctas {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-
-    a {
-      text-decoration: none;
-      text-transform: uppercase;
-      color: $dark;
-      font-size: 15vw;
-      line-height: 1;
-    }
-  }
-
-  &__hero-sub {
-    margin-top: 0;
-    color: $dark;
-    font-weight: 300;
-  }
 }
 
 @media only screen and (min-width: 1000px) {
@@ -68,7 +39,7 @@
       width: auto;
       margin: auto;
       max-width: 1200px;
-      width: 70vw;
+      margin: 75px;
     }
 
     &__intro {
@@ -77,20 +48,7 @@
       justify-content: flex-end;
       margin-bottom: 2vh;
       margin-right: 50px;
-    }
-
-    &__hero {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-    }
-
-    &__hero-ctas {
-      a {
-        text-decoration: none;
-        color: $dark;
-        font-size: 125px;
-      }
+      width: 370px;
     }
   }
 }
