--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -2,7 +2,7 @@
 
 .nav {
   background-color: $light;
-  margin: 40px 10% 0;
+  margin: 10px 5%;
   box-sizing: border-box;
 
   &__link-container {
