--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,18 @@
 @import "./styles/variables.scss";
 
 body {
-  background-color: $light;
+  // background-color: $light;
+  background-color: $dark;
   color: $dark;
   text-align: center;
 }
 
+h1,
+h2,
+p,
+a {
+  color: $light !important;
+}
 h1 {
   margin: 0;
 }
