--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -22,8 +22,8 @@
   }
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 700px) {
   .nav {
-    margin: $small-padding $small-padding 0;
+    display: none;
   }
 }
