--- a/src/components/Projects/Header/Header.scss
+++ b/src/components/Projects/Header/Header.scss
@@ -2,10 +2,10 @@
 
 @keyframes header-loader {
   from {
-    height: 0;
+    transform: scaleY(0);
   }
   to {
-    height: 100%;
+    transform: scaleY(100%);
   }
 }
 
@@ -28,18 +28,40 @@
   justify-content: space-around;
   color: white;
   font-family: "Gloock";
+  margin: 0 4%;
 
   h1 {
+    z-index: 2;
+    font-size: 7vw;
+  }
+
+  &__home {
+    position: absolute;
+    left: 0;
+    top: 0;
+    color: white;
     z-index: 2;
   }
 }
 
 .header-anim {
   animation: header-loader 0.6s forwards ease-in-out;
+  transform-origin: top;
   background: $dark;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
+  height: 100%;
   z-index: 1;
+}
+
+@media only screen and (min-width: 1000px) {
+  .header {
+    height: 80vh;
+
+    h1 {
+      font-size: 100px;
+    }
+  }
 }
