--- a/src/pages/projects/projects.scss
+++ b/src/pages/projects/projects.scss
@@ -1,12 +1,93 @@
 @import "../../styles/variables.scss";
 
 .project {
-  margin: 0 5%;
+  text-align: left;
 
-  &__desc {
+  h2 {
+    text-decoration: underline;
+    // text-transform: uppercase;
+    font-weight: 400;
+    font-family: "Gloock";
+    font-size: 20px;
+  }
+
+  &__section {
+    margin: 10% 8%;
+  }
+
+  &__intro {
     font-size: 28px;
     text-align: left;
-    width: 85%;
-    margin: 20px auto 0;
+    margin: 5%;
+    font-family: "Gloock";
+    font-weight: 200;
+    letter-spacing: 2px;
+
+    // width: 85%;
+  }
+
+  &__bullet {
+    margin: 10% 6%;
+    text-align: left;
+    color: $dark;
+    // font-family: "Gloock";
+
+    a {
+      // text-decoration: none;
+      // color: ;
+    }
+  }
+
+  &__img-cont {
+    max-width: 100%;
+    img {
+      object-fit: cover;
+      // width: 500px;
+      width: 100%;
+    }
+  }
+
+  &__desc {
+    margin: 20px;
+  }
+}
+
+@media only screen and (min-width: 700px) {
+  .project {
+    h2 {
+    }
+
+    &__section {
+      margin: 50px auto;
+      width: 70%;
+      max-width: 800px;
+    }
+
+    &__intro {
+      font-size: 50px;
+    }
+
+    &__bullet {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &__bullet-point {
+      max-width: 200px;
+    }
+
+    &__img-cont {
+      max-width: 100%;
+      margin: 0 4%;
+      img {
+        // object-fit: cover;
+        // width: 500px;
+        // width: 100%;
+      }
+    }
+
+    &__desc {
+      margin: 20px;
+    }
   }
 }
