--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -5,6 +5,7 @@
   text-align: left;
   margin: 0 10%;
 
+
   &__intro {
     margin-bottom: 25px;
     h1 {
@@ -23,13 +24,14 @@
     }
   }
   &__content {
+    margin-top: 75px;
   }
 }
 
 @media only screen and (min-width: 1000px) {
   .landing {
-    margin: 75px;
-    height: 90vh;
+    margin: 0 75px;
+    height: 100vh;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
